Removed BolgerUtils.Framework. Added BolgerUtils.Framework.EntityFramework & BolgerUtils.Framework.Razor.

--- a/BolgerUtils.FileToObjectMapping/BolgerUtils.FileToObjectMapping.nuspec
+++ b/BolgerUtils.FileToObjectMapping/BolgerUtils.FileToObjectMapping.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
@@ -11,6 +11,6 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
-    <tags>File Object Mapping</tags>
+    <tags>file object mapping</tags>
   </metadata>
 </package>
