--- a/BolgerUtils.Framework.EntityFramework/BolgerUtils.Framework.EntityFramework.nuspec
+++ b/BolgerUtils.Framework.EntityFramework/BolgerUtils.Framework.EntityFramework.nuspec
@@ -3,14 +3,14 @@
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
-    <title>$id$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
+    <title>$title$</title>
+    <authors>Matthew Bolger</authors>
+    <owners>Matthew Bolger</owners>
     <license type="expression">Apache-2.0</license>
     <projectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
-    <tags>enum</tags>
+    <tags>utils EntityFramework</tags>
   </metadata>
 </package>
