Added more tests.

--- a/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.csproj
+++ b/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="ExtensionUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="BolgerUtils.Framework.Razor.nuspec" />
