Added Console.BolgerUtils.EnumDisplayAndFileToObjectMapping and refactored IsNull method.

--- a/Console.BolgerUtils/Console.BolgerUtils.csproj
+++ b/Console.BolgerUtils/Console.BolgerUtils.csproj
@@ -11,17 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BolgerUtils.EnumDisplay\BolgerUtils.EnumDisplay.csproj" />
-    <ProjectReference Include="..\BolgerUtils.FileToObjectMapping\BolgerUtils.FileToObjectMapping.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Data\accounts.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Data\people.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <ProjectReference Include="..\BolgerUtils\BolgerUtils.csproj" />
   </ItemGroup>
 
 </Project>
