--- a/BolgerUtils.EnumDisplay/BolgerUtils.EnumDisplay.csproj
+++ b/BolgerUtils.EnumDisplay/BolgerUtils.EnumDisplay.csproj
@@ -9,12 +9,13 @@
     <PackageProjectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/</PackageProjectUrl>
     <RepositoryUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/</RepositoryUrl>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <Version>1.9.2</Version>
+    <Version>1.9.4</Version>
     <PackageTags>enum</PackageTags>
+    <FileVersion>1.9.4.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BolgerUtils" Version="1.9.2" />
+    <PackageReference Include="BolgerUtils" Version="1.9.4" />
   </ItemGroup>
 
 </Project>
