--- a/BolgerUtils/BolgerUtils.csproj
+++ b/BolgerUtils/BolgerUtils.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.9.2</Version>
+    <Version>1.9.4</Version>
     <Authors>Matthew Bolger</Authors>
     <Description>BolgerUtils</Description>
     <Copyright>Copyright ©  2019</Copyright>
@@ -11,6 +11,7 @@
     <RepositoryUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/</RepositoryUrl>
     <PackageTags>utils</PackageTags>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.9.4.0</FileVersion>
   </PropertyGroup>
 
 </Project>
