Updated Razor test to use .cshtml file.

--- a/Tests.BolgerUtils.Framework.Razor/Tests.BolgerUtils.Framework.Razor.csproj
+++ b/Tests.BolgerUtils.Framework.Razor/Tests.BolgerUtils.Framework.Razor.csproj
@@ -39,7 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BolgerUtils, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\BolgerUtils.1.9.2\lib\netstandard2.0\BolgerUtils.dll</HintPath>
+      <HintPath>..\packages\BolgerUtils.1.9.4\lib\netstandard2.0\BolgerUtils.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.CodeCoverage.Shim, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeCoverage.16.3.0\lib\net45\Microsoft.VisualStudio.CodeCoverage.Shim.dll</HintPath>
@@ -82,9 +82,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <Content Include="Templates\_Test.cshtml.txt">
+    <None Include="Templates\_Test.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
