--- a/BolgerUtils.EnumDisplay/BolgerUtils.EnumDisplay.csproj
+++ b/BolgerUtils.EnumDisplay/BolgerUtils.EnumDisplay.csproj
@@ -6,7 +6,7 @@
     <Description>BolgerUtils.EnumDisplay</Description>
     <Copyright>Copyright ©  2019</Copyright>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <PackageProjectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/</PackageProjectUrl>
+    <PackageProjectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.EnumDisplay/</PackageProjectUrl>
     <RepositoryUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/</RepositoryUrl>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <Version>1.9.4</Version>
