--- a/BolgerUtils.Framework.EnumDisplay/BolgerUtils.Framework.EnumDisplay.nuspec
+++ b/BolgerUtils.Framework.EnumDisplay/BolgerUtils.Framework.EnumDisplay.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
@@ -7,7 +7,7 @@
     <authors>Matthew Bolger</authors>
     <owners>Matthew Bolger</owners>
     <license type="expression">Apache-2.0</license>
-    <projectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/</projectUrl>
+    <projectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.Framework.EnumDisplay/</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
