--- a/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.csproj
+++ b/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <None Include="BolgerUtils.Framework.Razor.nuspec" />
     <None Include="packages.config" />
+    <None Include="Readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
