--- a/BolgerUtils.Framework.EntityFramework/BolgerUtils.Framework.EntityFramework.csproj
+++ b/BolgerUtils.Framework.EntityFramework/BolgerUtils.Framework.EntityFramework.csproj
@@ -62,6 +62,7 @@
     <None Include="App.config" />
     <None Include="BolgerUtils.Framework.EntityFramework.nuspec" />
     <None Include="packages.config" />
+    <None Include="Readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
