--- a/BolgerUtils.Framework.WebForms/BolgerUtils.Framework.WebForms.csproj
+++ b/BolgerUtils.Framework.WebForms/BolgerUtils.Framework.WebForms.csproj
@@ -59,6 +59,7 @@
     <None Include="app.config" />
     <None Include="BolgerUtils.Framework.WebForms.nuspec" />
     <None Include="packages.config" />
+    <None Include="Readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
