--- a/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.nuspec
+++ b/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.nuspec
@@ -11,6 +11,6 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
-    <tags>utils razor</tags>
+    <tags>Razor</tags>
   </metadata>
 </package>
