--- a/BolgerUtils/BolgerUtils.csproj
+++ b/BolgerUtils/BolgerUtils.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.0.3</Version>
+    <Version>2.0.4</Version>
     <Authors>Matthew Bolger</Authors>
     <Description>See https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils/</Description>
     <Copyright>Copyright ©  2019</Copyright>
@@ -12,6 +12,15 @@
     <PackageTags>utils</PackageTags>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>2.0.1.0</FileVersion>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageIconUrl />
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="icon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
