--- a/BolgerUtils.FileToObjectMapping/BolgerUtils.FileToObjectMapping.nuspec
+++ b/BolgerUtils.FileToObjectMapping/BolgerUtils.FileToObjectMapping.nuspec
@@ -4,6 +4,7 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$id$</title>
+    <icon>icon.png</icon>
     <authors>$author$</authors>
     <owners>$author$</owners>
     <license type="expression">Apache-2.0</license>
