--- a/BolgerUtils.Framework.EntityFramework/BolgerUtils.Framework.EntityFramework.nuspec
+++ b/BolgerUtils.Framework.EntityFramework/BolgerUtils.Framework.EntityFramework.nuspec
@@ -4,6 +4,7 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
+    <iconUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.Framework.EntityFramework/icon.png</iconUrl>
     <authors>Matthew Bolger</authors>
     <owners>Matthew Bolger</owners>
     <license type="expression">Apache-2.0</license>
