--- a/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.csproj
+++ b/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.csproj
@@ -62,6 +62,9 @@
     <None Include="packages.config" />
     <None Include="Readme.md" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
