--- a/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.nuspec
+++ b/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.nuspec
@@ -4,7 +4,7 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <iconUrl></iconUrl>
+    <iconUrl>https://bitbucket.org/xan1000/bolgerutils/raw/fdef433a4c57e56e0f4abd52039edb1ba16e633b/BolgerUtils.Framework.Razor/icon.png</iconUrl>
     <authors>Matthew Bolger</authors>
     <owners>Matthew Bolger</owners>
     <license type="expression">Apache-2.0</license>
