--- a/BolgerUtils.Framework.WebForms/BolgerUtils.Framework.WebForms.csproj
+++ b/BolgerUtils.Framework.WebForms/BolgerUtils.Framework.WebForms.csproj
@@ -61,6 +61,9 @@
     <None Include="packages.config" />
     <None Include="Readme.md" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
