--- a/BolgerUtils.Framework.WebForms/BolgerUtils.Framework.WebForms.nuspec
+++ b/BolgerUtils.Framework.WebForms/BolgerUtils.Framework.WebForms.nuspec
@@ -4,6 +4,7 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
+    <iconUrl></iconUrl>
     <authors>Matthew Bolger</authors>
     <owners>Matthew Bolger</owners>
     <license type="expression">Apache-2.0</license>
