--- a/BolgerUtils.Framework.WebForms/BolgerUtils.Framework.WebForms.nuspec
+++ b/BolgerUtils.Framework.WebForms/BolgerUtils.Framework.WebForms.nuspec
@@ -4,7 +4,7 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <iconUrl></iconUrl>
+    <iconUrl>https://bitbucket.org/xan1000/bolgerutils/raw/1e356c17f21b66645d10af5acdf3b48209553475/BolgerUtils.Framework.WebForms/icon.png</iconUrl>
     <authors>Matthew Bolger</authors>
     <owners>Matthew Bolger</owners>
     <license type="expression">Apache-2.0</license>
