--- a/BolgerUtils.TimeZoneConverter/BolgerUtils.TimeZoneConverter.csproj
+++ b/BolgerUtils.TimeZoneConverter/BolgerUtils.TimeZoneConverter.csproj
@@ -3,7 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Matthew Bolger</Authors>
-    <Description>See https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.TimeZoneConverter/</Description>
+    <Description>See https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.TimeZoneConverter/
+
+- Attribution -
+
+The BolgerUtils icon is attributed to Bernadette O'Keefe: https://svg-clipart.com/sign/RsnsoX2-man-carrying-a-big-bag-of-money-clipart
+</Description>
     <Copyright>Copyright ©  2019</Copyright>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <RepositoryUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/</RepositoryUrl>
