--- a/BolgerUtils/BolgerUtils.csproj
+++ b/BolgerUtils/BolgerUtils.csproj
@@ -4,7 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>2.0.5</Version>
     <Authors>Matthew Bolger</Authors>
-    <Description>See https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils/</Description>
+    <Description>See https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils/
+
+- Attribution -
+
+The BolgerUtils icon is attributed to Bernadette O'Keefe: https://svg-clipart.com/sign/RsnsoX2-man-carrying-a-big-bag-of-money-clipart
+</Description>
     <Copyright>Copyright ©  2019</Copyright>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils/</PackageProjectUrl>
