--- a/BolgerUtils.TimeZoneConverter/BolgerUtils.TimeZoneConverter.csproj
+++ b/BolgerUtils.TimeZoneConverter/BolgerUtils.TimeZoneConverter.csproj
@@ -16,11 +16,12 @@ The BolgerUtils icon is attributed to Bernadette O'Keefe: https://svg-clipart.co
     <PackageProjectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.TimeZoneConverter/</PackageProjectUrl>
     <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl />
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BolgerUtils" Version="2.0.5" />
-    <PackageReference Include="BolgerUtils.EnumDisplay" Version="2.0.5" />
+    <PackageReference Include="BolgerUtils" Version="2.0.6" />
+    <PackageReference Include="BolgerUtils.EnumDisplay" Version="2.0.6" />
   </ItemGroup>
 
   <ItemGroup>
