--- a/BolgerUtils.TimeZoneConverter/BolgerUtils.TimeZoneConverter.csproj
+++ b/BolgerUtils.TimeZoneConverter/BolgerUtils.TimeZoneConverter.csproj
@@ -16,12 +16,13 @@ The BolgerUtils icon is attributed to Bernadette O'Keefe: https://svg-clipart.co
     <PackageProjectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.TimeZoneConverter/</PackageProjectUrl>
     <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl />
-    <Version>2.0.7.3</Version>
+    <Version>2.0.7.8</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BolgerUtils" Version="2.0.7.3" />
+    <PackageReference Include="BolgerUtils" Version="2.0.7.8" />
     <PackageReference Include="BolgerUtils.EnumDisplay" Version="2.0.7.3" />
+    <PackageReference Include="TimeZoneConverter" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
