--- a/BolgerUtils.EnumDisplay/BolgerUtils.EnumDisplay.nuspec
+++ b/BolgerUtils.EnumDisplay/BolgerUtils.EnumDisplay.nuspec
@@ -8,7 +8,7 @@
     <authors>$author$</authors>
     <owners>$author$</owners>
     <license type="expression">Apache-2.0</license>
-    <projectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.EnumDisplay/</projectUrl>
+    <projectUrl>https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.EnumDisplay</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
