--- a/BolgerUtils.Framework.EntityFramework/BolgerUtils.Framework.EntityFramework.nuspec
+++ b/BolgerUtils.Framework.EntityFramework/BolgerUtils.Framework.EntityFramework.nuspec
@@ -4,11 +4,11 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <iconUrl>https://bitbucket.org/xan1000/bolgerutils/raw/71273dec0cf58eae502bb706c2a7aa735b983aba/BolgerUtils.Framework.EntityFramework/icon.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xan1000/BolgerUtils/master/BolgerUtils.Framework.EntityFramework/icon.png</iconUrl>
     <authors>Matthew Bolger</authors>
     <owners>Matthew Bolger</owners>
     <license type="expression">Apache-2.0</license>
-    <projectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.Framework.EntityFramework/</projectUrl>
+    <projectUrl>https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.Framework.EntityFramework</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
