--- a/BolgerUtils.Framework.EnumDisplay/BolgerUtils.Framework.EnumDisplay.nuspec
+++ b/BolgerUtils.Framework.EnumDisplay/BolgerUtils.Framework.EnumDisplay.nuspec
@@ -4,11 +4,11 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <iconUrl>https://bitbucket.org/xan1000/bolgerutils/raw/b557e747b3c3617025b7c5004bb61b8bca97e35a/BolgerUtils.Framework.EnumDisplay/icon.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xan1000/BolgerUtils/master/BolgerUtils.Framework.EnumDisplay/icon.png</iconUrl>
     <authors>Matthew Bolger</authors>
     <owners>Matthew Bolger</owners>
     <license type="expression">Apache-2.0</license>
-    <projectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.Framework.EnumDisplay/</projectUrl>
+    <projectUrl>https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.Framework.EnumDisplay</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
