--- a/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.nuspec
+++ b/BolgerUtils.Framework.Razor/BolgerUtils.Framework.Razor.nuspec
@@ -4,11 +4,11 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <iconUrl>https://bitbucket.org/xan1000/bolgerutils/raw/fdef433a4c57e56e0f4abd52039edb1ba16e633b/BolgerUtils.Framework.Razor/icon.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xan1000/BolgerUtils/master/BolgerUtils.Framework.Razor/icon.png</iconUrl>
     <authors>Matthew Bolger</authors>
     <owners>Matthew Bolger</owners>
     <license type="expression">Apache-2.0</license>
-    <projectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.Framework.Razor/</projectUrl>
+    <projectUrl>https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.Framework.Razor</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
