--- a/BolgerUtils.Framework.WebForms/BolgerUtils.Framework.WebForms.nuspec
+++ b/BolgerUtils.Framework.WebForms/BolgerUtils.Framework.WebForms.nuspec
@@ -4,11 +4,11 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <iconUrl>https://bitbucket.org/xan1000/bolgerutils/raw/1e356c17f21b66645d10af5acdf3b48209553475/BolgerUtils.Framework.WebForms/icon.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xan1000/BolgerUtils/master/BolgerUtils.Framework.WebForms/icon.png</iconUrl>
     <authors>Matthew Bolger</authors>
     <owners>Matthew Bolger</owners>
     <license type="expression">Apache-2.0</license>
-    <projectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.Framework.WebForms/</projectUrl>
+    <projectUrl>https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.Framework.WebForms</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
