--- a/BolgerUtils.TimeZoneConverter/BolgerUtils.TimeZoneConverter.csproj
+++ b/BolgerUtils.TimeZoneConverter/BolgerUtils.TimeZoneConverter.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Matthew Bolger</Authors>
-    <Description>See https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.TimeZoneConverter/
+    <Description>See https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.TimeZoneConverter
 
 - Attribution -
 
@@ -11,9 +11,9 @@ The BolgerUtils icon is attributed to Bernadette O'Keefe: https://svg-clipart.co
 </Description>
     <Copyright>Copyright ©  2019</Copyright>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <RepositoryUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/</RepositoryUrl>
+    <RepositoryUrl>https://github.com/xan1000/BolgerUtils</RepositoryUrl>
     <PackageTags>DateTime;TimeZone;TimeZoneInfo;Converter</PackageTags>
-    <PackageProjectUrl>https://bitbucket.org/xan1000/bolgerutils/src/master/BolgerUtils.TimeZoneConverter/</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.TimeZoneConverter</PackageProjectUrl>
     <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl />
     <Version>2.0.7.8</Version>
