Updated Attribution to include new lines before link.

--- a/BolgerUtils.FileToObjectMapping/BolgerUtils.FileToObjectMapping.csproj
+++ b/BolgerUtils.FileToObjectMapping/BolgerUtils.FileToObjectMapping.csproj
@@ -10,7 +10,9 @@
 
 - Attribution -
 
-The BolgerUtils icon is attributed to Bernadette O'Keefe: https://svg-clipart.com/sign/RsnsoX2-man-carrying-a-big-bag-of-money-clipart
+The BolgerUtils icon is attributed to Bernadette O'Keefe:
+
+https://svg-clipart.com/sign/RsnsoX2-man-carrying-a-big-bag-of-money-clipart
 </Description>
     <PackageProjectUrl>https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.FileToObjectMapping</PackageProjectUrl>
     <RepositoryUrl>https://github.com/xan1000/BolgerUtils</RepositoryUrl>
