--- a/BolgerUtils/BolgerUtils.csproj
+++ b/BolgerUtils/BolgerUtils.csproj
@@ -7,7 +7,9 @@
 
 - Attribution -
 
-The BolgerUtils icon is attributed to Bernadette O'Keefe: https://svg-clipart.com/sign/RsnsoX2-man-carrying-a-big-bag-of-money-clipart
+The BolgerUtils icon is attributed to Bernadette O'Keefe:
+
+https://svg-clipart.com/sign/RsnsoX2-man-carrying-a-big-bag-of-money-clipart
 </Description>
     <Copyright>Copyright ©  2019</Copyright>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
