--- a/Console/Console.BolgerUtils/Console.BolgerUtils.csproj
+++ b/Console/Console.BolgerUtils/Console.BolgerUtils.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BolgerUtils\BolgerUtils.csproj" />
+    <ProjectReference Include="..\..\BolgerUtils\BolgerUtils.csproj" />
   </ItemGroup>
 
 </Project>
