--- a/Tests/Tests.BolgerUtils.FileToObjectMapping/Tests.BolgerUtils.FileToObjectMapping.csproj
+++ b/Tests/Tests.BolgerUtils.FileToObjectMapping/Tests.BolgerUtils.FileToObjectMapping.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2">
       <PrivateAssets>all</PrivateAssets>
@@ -14,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BolgerUtils.EnumDisplay\BolgerUtils.EnumDisplay.csproj" />
+    <ProjectReference Include="..\..\BolgerUtils.FileToObjectMapping\BolgerUtils.FileToObjectMapping.csproj" />
   </ItemGroup>
 
 </Project>
