--- a/Tests/Tests.BolgerUtils/Tests.BolgerUtils.csproj
+++ b/Tests/Tests.BolgerUtils/Tests.BolgerUtils.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2">
@@ -14,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BolgerUtils.TimeZoneConverter\BolgerUtils.TimeZoneConverter.csproj" />
+    <ProjectReference Include="..\..\BolgerUtils\BolgerUtils.csproj" />
   </ItemGroup>
 
 </Project>
