- Changed license to MIT and included LICENSE.txt.

--- a/BolgerUtils.FileToObjectMapping/BolgerUtils.FileToObjectMapping.csproj
+++ b/BolgerUtils.FileToObjectMapping/BolgerUtils.FileToObjectMapping.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Authors>Matthew Bolger</Authors>
     <Copyright>Copyright ©  2019</Copyright>
-    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>File;Object;Mapping</PackageTags>
     <Description>See https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.FileToObjectMapping
 
@@ -26,6 +26,10 @@ https://svg-clipart.com/sign/RsnsoX2-man-carrying-a-big-bag-of-money-clipart
 
   <ItemGroup>
     <None Include="icon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="../LICENSE.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
