--- a/BolgerUtils.EnumDisplay/BolgerUtils.EnumDisplay.nuspec
+++ b/BolgerUtils.EnumDisplay/BolgerUtils.EnumDisplay.nuspec
@@ -7,7 +7,7 @@
     <icon>icon.png</icon>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <license type="expression">Apache-2.0</license>
+    <license type="expression">MIT</license>
     <projectUrl>https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.EnumDisplay</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
